meja/tests/if-then-else-error.meja
let x = fun (b) => {
  if (b) {
    true;
  } else {
    1i;
  };
};
